--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         </activity>
         <activity android:name=".HintActivity"
             android:screenOrientation="sensorPortrait"/>
-        <activity android:name=".SolverActivity" />
+        <activity android:name=".SolverActivity"
+            android:screenOrientation="sensorPortrait"/>
         <activity android:name=".SettingsActivity"></activity>
     </application>
     <!--<uses-permission android:name="android.permission.CAMERA" />-->
